déploiment et test local

--- a/Code/nltk_data/install.ipynb
+++ b/Code/nltk_data/install.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "08d7997f",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dossier de données NLTK personnalisé créé : c:\\Users\\pc\\Desktop\\Projet_Data_science\\AeroPulse_Corp\\Code\\nltk_data\\nltk_data\n",
       "\n",
       "--- Téléchargement des ressources NLTK spécifiques (peut prendre du temps) ---\n",
       "Cela garantit que les ressources sont au bon endroit et disponibles.\n",
@@ -24,8 +23,12 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package wordnet to c:\\Users\\pc\\Desktop\\Projet_\n",
-      "[nltk_data]     Data_science\\AeroPulse_Corp\\Code\\nltk_data\\nltk_data..\n",
-      "[nltk_data]     .\n"
+      "[nltk_data]     Data_science\\AeroPulse_Corp\\NLP_project\\Code\\nltk_data\n",
+      "[nltk_data]     \\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to c:\\Users\\pc\\Desktop\\Projet_\n",
+      "[nltk_data]     Data_science\\AeroPulse_Corp\\NLP_project\\Code\\nltk_data\n",
+      "[nltk_data]     \\nltk_data...\n"
      ]
     },
     {
@@ -33,31 +36,23 @@
      "output_type": "stream",
      "text": [
       "Ressource 'wordnet' téléchargée avec succès.\n",
-      "Téléchargement de la ressource 'omw-1.4'...\n"
+      "Téléchargement de la ressource 'omw-1.4'...\n",
+      "Ressource 'omw-1.4' téléchargée avec succès.\n",
+      "\n",
+      "--- Initialisation NLTK Complétée ---\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package omw-1.4 to c:\\Users\\pc\\Desktop\\Projet_\n",
-      "[nltk_data]     Data_science\\AeroPulse_Corp\\Code\\nltk_data\\nltk_data..\n",
-      "[nltk_data]     .\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ressource 'omw-1.4' téléchargée avec succès.\n",
-      "\n",
-      "--- Initialisation NLTK Complétée ---\n"
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "import numpy as np # type: ignore\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import nltk\n",
