--- a/Code/nltk_data/model.ipynb
+++ b/Code/nltk_data/model.ipynb
@@ -2,27 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "a2061b48",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import des librairies nécessaires\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "import numpy as np # type: ignore\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import nltk\n",
     "import re # Pour les expressions régulières\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.tokenize import word_tokenize # type: ignore\n",
+    "from nltk.corpus import stopwords # type: ignore\n",
+    "from nltk.stem import WordNetLemmatizer # type: ignore\n",
     "import os # Pour gérer les chemins de fichiers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "09521441",
    "metadata": {},
    "outputs": [
@@ -32,12 +32,17 @@
      "text": [
       "--- Projet NLP : Analyse de Sentiment Avancée (AeroPulse Corp.) ---\n",
       "--- Phase 2 : Préparation Initiale des Données Textuelles ---\n",
-      "Chemins de recherche NLTK configurés : ['c:\\\\Users\\\\pc\\\\Desktop\\\\Projet_Data_science\\\\AeroPulse_Corp\\\\Code\\\\nltk_data\\\\nltk_data', 'C:\\\\Users\\\\pc/nltk_data', 'c:\\\\Users\\\\pc\\\\anacond\\\\nltk_data', 'c:\\\\Users\\\\pc\\\\anacond\\\\share\\\\nltk_data', 'c:\\\\Users\\\\pc\\\\anacond\\\\lib\\\\nltk_data', 'C:\\\\Users\\\\pc\\\\AppData\\\\Roaming\\\\nltk_data', 'C:\\\\nltk_data', 'D:\\\\nltk_data', 'E:\\\\nltk_data']\n",
+      "Chemins de recherche NLTK configurés : ['c:\\\\Users\\\\pc\\\\Desktop\\\\Projet_Data_science\\\\AeroPulse_Corp\\\\NLP_project\\\\Code\\\\nltk_data\\\\nltk_data', 'c:\\\\Users\\\\pc\\\\Desktop\\\\Projet_Data_science\\\\AeroPulse_Corp\\\\NLP_project\\\\Code\\\\nltk_data\\\\nltk_data', 'C:\\\\Users\\\\pc/nltk_data', 'c:\\\\Users\\\\pc\\\\anacond\\\\nltk_data', 'c:\\\\Users\\\\pc\\\\anacond\\\\share\\\\nltk_data', 'c:\\\\Users\\\\pc\\\\anacond\\\\lib\\\\nltk_data', 'C:\\\\Users\\\\pc\\\\AppData\\\\Roaming\\\\nltk_data', 'C:\\\\nltk_data', 'D:\\\\nltk_data', 'E:\\\\nltk_data']\n",
       "\n",
       "--- Vérification et chargement des ressources NLTK ---\n",
       "Ressource 'punkt' déjà trouvée.\n",
       "Ressource 'stopwords' déjà trouvée.\n",
-      "La ressource 'wordnet' n'a pas été trouvée, tentative de téléchargement...\n"
+      "La ressource 'wordnet' n'a pas été trouvée, tentative de téléchargement...\n",
+      "Ressource 'wordnet' téléchargée avec succès.\n",
+      "La ressource 'omw-1.4' n'a pas été trouvée, tentative de téléchargement...\n",
+      "Ressource 'omw-1.4' téléchargée avec succès.\n",
+      "\n",
+      "--- Initialisation NLTK Complétée (au début du script) ---\n"
      ]
     },
     {
@@ -45,34 +50,13 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package wordnet to c:\\Users\\pc\\Desktop\\Projet_\n",
-      "[nltk_data]     Data_science\\AeroPulse_Corp\\Code\\nltk_data\\nltk_data..\n",
-      "[nltk_data]     .\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ressource 'wordnet' téléchargée avec succès.\n",
-      "La ressource 'omw-1.4' n'a pas été trouvée, tentative de téléchargement...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[nltk_data]     Data_science\\AeroPulse_Corp\\NLP_project\\Code\\nltk_data\n",
+      "[nltk_data]     \\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
       "[nltk_data] Downloading package omw-1.4 to c:\\Users\\pc\\Desktop\\Projet_\n",
-      "[nltk_data]     Data_science\\AeroPulse_Corp\\Code\\nltk_data\\nltk_data..\n",
-      "[nltk_data]     .\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ressource 'omw-1.4' téléchargée avec succès.\n",
-      "\n",
-      "--- Initialisation NLTK Complétée (au début du script) ---\n"
+      "[nltk_data]     Data_science\\AeroPulse_Corp\\NLP_project\\Code\\nltk_data\n",
+      "[nltk_data]     \\nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
     }
    ],
@@ -136,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "8129afcf",
    "metadata": {},
    "outputs": [
@@ -156,7 +140,7 @@
     "# Le fichier tweets.csv n'a pas toujours un encodage UTF-8 standard.\n",
     "# Il est courant d'essayer 'latin1' ou 'ISO-8859-1' pour ce type de fichiers.\n",
     "try:\n",
-    "    df_tweets = pd.read_csv('../../nlp_project/tweets.csv', encoding='latin1')\n",
+    "    df_tweets = pd.read_csv('../../data/tweets.csv', encoding='latin1')\n",
     "    print(\"\\nDataset 'tweets.csv' chargé avec succès !\")\n",
     "    print(f\"Dimensions initiales du dataset : {df_tweets.shape}\")\n",
     "except FileNotFoundError:\n",
@@ -171,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "43fddb88",
    "metadata": {},
    "outputs": [
@@ -244,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "d0ab8fad",
    "metadata": {},
    "outputs": [
@@ -284,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "27dc37e1",
    "metadata": {},
    "outputs": [
@@ -313,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "610cceca",
    "metadata": {},
    "outputs": [
@@ -329,7 +313,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_22060\\26003922.py:4: FutureWarning: \n",
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_21528\\26003922.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -362,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "5d701d7f",
    "metadata": {},
    "outputs": [
@@ -433,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "f9791c27",
    "metadata": {},
    "outputs": [
@@ -465,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "8144b0de",
    "metadata": {},
    "outputs": [
@@ -505,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "ff146634",
    "metadata": {},
    "outputs": [
@@ -558,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "e98bf498",
    "metadata": {},
    "outputs": [],
@@ -571,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "1bc977c4",
    "metadata": {},
    "outputs": [
@@ -607,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "93444b3a",
    "metadata": {},
    "outputs": [],
@@ -619,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "ed5e2a2c",
    "metadata": {},
    "outputs": [
@@ -651,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "4901be72",
    "metadata": {},
    "outputs": [
@@ -687,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "id": "7f207c83",
    "metadata": {},
    "outputs": [
@@ -713,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "97c380d4",
    "metadata": {},
    "outputs": [
@@ -742,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "id": "196eae4d",
    "metadata": {},
    "outputs": [
@@ -753,7 +737,7 @@
       "\n",
       "--- Entraînement du Modèle LightGBM Classifier pour le Sentiment ---\n",
       "[LightGBM] [Info] Number of positive: 7264, number of negative: 4277\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.059204 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.078778 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 25937\n",
@@ -793,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "b386d28f",
    "metadata": {},
    "outputs": [
@@ -923,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "id": "b9039c2e",
    "metadata": {},
    "outputs": [
@@ -966,7 +950,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_22060\\3230862792.py:52: FutureWarning: The NumPy global RNG was seeded by calling `np.random.seed`. In a future version this function will no longer use the global RNG. Pass `rng` explicitly to opt-in to the new behaviour and silence this warning.\n",
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_21528\\3441340221.py:53: FutureWarning: The NumPy global RNG was seeded by calling `np.random.seed`. In a future version this function will no longer use the global RNG. Pass `rng` explicitly to opt-in to the new behaviour and silence this warning.\n",
       "  shap.summary_plot(\n"
      ]
     },
@@ -1041,6 +1025,7 @@
     "\n",
     "# 1. Obtenir l'Explainer SHAP pour notre modèle LightGBM\n",
     "explainer = shap.TreeExplainer(lgb_sentiment_model)\n",
+    "feature_names_for_shap = vectorizer.get_feature_names_out()\n",
     "\n",
     "# --- CORRECTION ROBUSTE ICI pour l'échantillonnage des données SHAP ---\n",
     "num_samples = 1000 # Nombre d'échantillons pour SHAP. Peut être augmenté à 5000 si RAM le permet.\n",
@@ -1203,6 +1188,63 @@
     "\n",
     "print(\"\\n--- IA Explicable (XAI) Terminée pour le Sentiment ---\")\n",
     "# --- FIN DU BLOC IA EXPLICABLE ---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "4da9c6e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Modèle LightGBM sauvegardé sous : ./model_tfidf_lgbm\\lgbm_sentiment_model.pkl\n",
+      "TfidfVectorizer sauvegardé sous : ./model_tfidf_lgbm\\tfidf_vectorizer.pkl\n",
+      "\n",
+      "--- Modèle TF-IDF/LightGBM sauvegardés ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- AJOUTER CE BLOC POUR LA SAUVEGARDE DU MODÈLE TF-IDF/LIGHTGBM ---\n",
+    "# (Ce bloc doit être placé APRÈS l'entraînement de lgb_sentiment_model et vectorizer,\n",
+    "# et AVANT le début de l'entraînement de BERT)\n",
+    "\n",
+    "import joblib # Assurez-vous que joblib est importé au début du script\n",
+    "import os     # Assurez-vous que os est importé au début du script\n",
+    "\n",
+    "# Créer un dossier 'model_tfidf_lgbm' si ce n'est pas déjà fait\n",
+    "# ADAPTEZ CE CHEMIN POUR QU'IL SOIT SUR VOTRE MACHINE LOCALE\n",
+    "# Par exemple: os.path.join(os.getcwd(), 'model_tfidf_lgbm') si dans le même dossier que votre notebook\n",
+    "# Ou 'C:/Users/VotreNom/MonProjetNLP/model_tfidf_lgbm'\n",
+    "model_tfidf_lgbm_dir = './model_tfidf_lgbm' # <-- CHEMIN RELATIF DANS LE DOSSIER DE VOTRE NOTEBOOK\n",
+    "if not os.path.exists(model_tfidf_lgbm_dir):\n",
+    "    os.makedirs(model_tfidf_lgbm_dir)\n",
+    "    print(f\"Dossier de sauvegarde créé : {model_tfidf_lgbm_dir}\")\n",
+    "\n",
+    "\n",
+    "# Nom du fichier pour le modèle LightGBM Classifier\n",
+    "lgbm_model_filename = os.path.join(model_tfidf_lgbm_dir, 'lgbm_sentiment_model.pkl')\n",
+    "# Nom du fichier pour le TfidfVectorizer\n",
+    "vectorizer_filename = os.path.join(model_tfidf_lgbm_dir, 'tfidf_vectorizer.pkl')\n",
+    "\n",
+    "try:\n",
+    "    # Sauvegarder le modèle LightGBM Classifier\n",
+    "    joblib.dump(lgb_sentiment_model, lgbm_model_filename)\n",
+    "    print(f\"\\nModèle LightGBM sauvegardé sous : {lgbm_model_filename}\")\n",
+    "\n",
+    "    # Sauvegarder le TfidfVectorizer (il est aussi entraîné)\n",
+    "    joblib.dump(vectorizer, vectorizer_filename)\n",
+    "    print(f\"TfidfVectorizer sauvegardé sous : {vectorizer_filename}\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"\\nERREUR lors de la sauvegarde du modèle TF-IDF/LightGBM : {e}\")\n",
+    "    print(\"Vérifiez que 'lgb_sentiment_model' et 'vectorizer' sont définis et que le chemin est accessible.\")\n",
+    "\n",
+    "print(\"\\n--- Modèle TF-IDF/LightGBM sauvegardés ---\")"
    ]
   }
  ],
